[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Polyaa <polinasatrajkina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
isort = "^5.13.2"
mypy = "^1.11.2"
black = "^24.8.0"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
